build: fix maven dependencies, docker setup and application config

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,3 @@
 spring:
-  data:
-    mongodb:
-      uri: mongodb://${MONGO_USER}:${MONGO_PASSWORD}@savt_db:27017/savt_db?authSource=admin
+  profiles:
+    active: qa
