--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   savt_db:
     image: mongo:6.0
@@ -20,21 +18,27 @@ services:
       retries: 5
       start_period: 30s
 
-  app:
-    build: .
-    container_name: savt_app
-    restart: always
-    depends_on:
-      savt_db:
-        condition: service_healthy
+  savt_redis:
+    image: redis:alpine
+    container_name: savt_redis
     ports:
-      - "8080:8080"
-    volumes:
-      - ./src:/app/src
-      - ./pom.xml:/app/pom.xml
-    environment:
-      SPRING_PROFILES_ACTIVE: qa
-      SPRING_DATA_MONGODB_URI: mongodb://${MONGO_USER}:${MONGO_PASSWORD}@savt_db:27017/savt_db?authSource=admin
+      - "6379:6379"
+
+#  app:
+#    build: .
+#    container_name: savt_app
+#    restart: always
+#    depends_on:
+#      savt_db:
+#        condition: service_healthy
+#    ports:
+#      - "8080:8080"
+#    volumes:
+#      - ./src:/app/src
+#      - ./pom.xml:/app/pom.xml
+#    environment:
+#      SPRING_PROFILES_ACTIVE: qa
+#      SPRING_DATA_MONGODB_URI: mongodb://${MONGO_USER}:${MONGO_PASSWORD}@savt_db:27017/savt_db?authSource=admin
 
 volumes:
   db_data:
